[tool.uv]
package = false

[project]
name = "xcash-signer"
# signer 不维护独立版本，其版本即 Xcash 主项目版本；此处占位仅为满足 uv 对 [project].version 的解析要求。
version = "0"
description = "Standalone signer service for Xcash."
requires-python = "==3.13.*"
dependencies = [
    "django==5.2.12",
    "django-environ==0.13.0",
    "djangorestframework==3.17.1",
    "django-redis==6.0.0",
    "redis==7.4.0",
    "hiredis==3.3.1",
    "web3==7.16.0",
    "bip-utils==2.12.1",
    "cryptography==48.0.0",
]

[dependency-groups]
dev = [
    "django-migration-linter==6.0.0",
    "psycopg[binary]==3.3.2",
    "pytest==8.3.5",
    "pytest-django==4.11.1",
]
production = [
    "psycopg[c]==3.3.4",
    "gunicorn==23.0.0",
]

[tool.pytest.ini_options]
python_files = [
    "tests.py",
    "test_*.py",
]
# signer 子项目内直接执行 uv run pytest 时，默认走自己的测试 settings，
# 避免再依赖手工导出 DJANGO_SETTINGS_MODULE 或本地 PostgreSQL/Redis。
DJANGO_SETTINGS_MODULE = "config.test"
